--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,7 @@
     <filter>
         <whitelist>
             <directory suffix=".php">src/</directory>
+            <directory suffix=".php">database/seeds/</directory>
         </whitelist>
     </filter>
     <logging>
