--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,12 @@
             "Mabadir\\ActivityTracker\\Tests\\": "tests/"
         }
     },
-    "require": {}
+    "require": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Mabadir\\ActivityTracker\\ActivityTrackerServiceProvider"
+            ]
+        }
+    },
 }
